<resources>
    <string name="app_name">HabitLoop</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_habbit">Add A New Habit</string>
    <string name="action_edit_habit">Edit Habits</string>
    <string name="title_activity_habit_info">HabitInfoActivity</string>
    <string name="habit_name_hint">Habit Name</string>
    <string name="description_hint">Description (Optional)</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="time_label">Set Time:</string>
    <string name="start_time_hint">Starting Time</string>
    <string name="end_time_hint">Ending Time</string>
    <string name="days_label">Set Days:</string>
    <string name="mon_check_text">Mon</string>
    <string name="tue_check_text">Tue</string>
    <string name="wed_check_text">Wed</string>
    <string name="thu_check_text">Thu</string>
    <string name="fri_check_text">Fri</string>
    <string name="sat_check_text">Sat</string>
    <string name="sun_check_text">Sun</string>
    <string name="dialog_delete_title">Delete Alert!</string>
    <string name="dialog_delete_message">Are you sure you want to delete this habit?</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">NO</string>
    <string name="title_activity_info_edit">InfoEditActivity</string>
    <string name="EXTRA_HABIT_CLICKED_INDEX">HABIT CLICKED INDEX</string>
    <string name="passing_extra_error">passing Extra Error</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_empty_habit_message">There Are No Habit Created Yet!</string>
    <string name="dialog_empty_habit_title">Empty Habit Alert!</string>
    <string name="dialog_name_empty_title">Empty Name Alert!</string>
    <string name="dialog_name_empty_message">Sorry! Habit Name Cannot Be Empty!</string>
    <string name="dialog_time_error_title">Time Setting Alert!</string>
    <string name="dialog_time_error_message">Sorry! Habit Start Time Must Be Earlier Than End Time!</string>
    <string name="action_save">SAVE</string>
</resources>
